[gd_scene load_steps=4 format=3 uid="uid://bml5jrcuhvjjm"]

[ext_resource type="Script" uid="uid://jagtwmh6onxa" path="res://scenes/game/inventory_ui/item_holder/item_description/item_description.gd" id="1_wl2sg"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_thida"]

[sub_resource type="LabelSettings" id="LabelSettings_wl2sg"]
font_size = 40
font_color = Color(0.780392, 0.862745, 0.815686, 1)

[node name="ItemDescription" type="MarginContainer"]
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_wl2sg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ItemTexture" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_thida")
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
mouse_filter = 2

[node name="ItemName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "{ITEM_NAME}"

[node name="ItemTagLine" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "{ITEM_TAGLINE}"
label_settings = SubResource("LabelSettings_wl2sg")

[node name="ItemDescription" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "{Item_Description}"
autowrap_mode = 3
